--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       </div>
     </div>
   </header>
+  <a class="twitter-timeline" data-height="1000" data-theme="light" href="https://twitter.com/Hyouketsu_dev?ref_src=twsrc%5Etfw">Tweets by Hyouketsu_dev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <div class="top-wrapper">
     <div class="container">
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
