--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
-    <title>:: Startr :: Free Startup landing page</title>
+        <title>東方フェアリーコネクト</title>
 
 
 
@@ -105,15 +105,17 @@
 
                         <ul class="nav navbar-nav">
 
-                            <li class="active"><a href="#headere-top" title="Home">トップ</a></li>
+                            <li class="active"><a href="#headere-top" title="Home">Top</a></li>
 
-                            <li><a href="#section-one" title="Overview">ムービー</a></li>
+                            <li><a href="#section-zero" title="Movie">Movie</a></li>
 
-                            <li><a href="#section-two" title="Features">ニュース</a></li>
+                            <li><a href="#section-one" title="News">News</a></li>
 
-                            <li><a href="#section-three" title="Pricing">キャラクター</a></li>
+                            <li><a href="#section-two" title="Story">Story</a></li>
 
-                            <li><a href="#section-four" title="Team">システム</a></li>
+                            <li><a href="#section-three" title="Character">Character</a></li>
+
+                            <li><a href="#section-four" title="System">System</a></li>
 
                         </ul>
 
@@ -132,38 +134,30 @@
     </div>
 
     <!-- banner image -->
-    <figure>
-        <div class="parallax-window item tp-banner-container" data-parallax="scroll" data-image-src="images/thm_01.png"></div>
-        <!-- banner Text -->
-        <section class="text-center">
-            <img style="display: block; margin: -10% auto; width: 80%;" src="images/logo_01.png" alt="Description">
-        </section>
-        <!-- banner Text -->
-    </figure>
+
     <!-- banner image -->
 </header>
 <!-- header -->
 
-
 <!-- main -->
 <main role="main" id=" main-wrapper">
-    <section class="section-one text-center">
-        <header role="title-page" class="text-center">
-            <h1>現在鋭意開発中</h1>
-        </header>
+    <section class="center">
+        <img class="dev" style="padding-top: 150px;display: block;max-width: 100%;height: auto;" src="images/logo_01.png" alt="Description">
     </section>
 
-    <section class="section-one text-center">
-        <header role="title-page" class="text-center">
-            <h1 class="line">Movie</h1>
-        </header>
+    <section class="center">
+        <img class="dev" style="padding-top: 50px;display: block;min-width: 25%;max-width: 50%;height: auto;" src="images/dev.png" alt="Description">
     </section>
 
     <!-- section-zero -->
-    <section class="section-one text-center" id="section-zero">
+    <section class="section-zero text-center" id="section-zero">
+        <section class="text-center">
+            <header role="title-page" class="text-center">
+                <h1 class="line">Movie</h1>
+            </header>
+        </section>
         <div class="container">
             <!--slider pan -->
-
             <div class="slider-pan">
                 <!-- carousel -->
                 <div id="owl-demo2" class="owl-carousel text-center" role="slider">
@@ -218,24 +212,20 @@
             </section>
             <div class="col-xs-12 col-sm-12 col-md-12 text-center" id="mySection">
                 <h3>　</h3>
-                <h3>　</h3>
-                <h3>　</h3>
                 <h1>―幻想郷の地下深くに【妖精の楽園】が眠っている―</h1>
                 <h1>妖精達の間でそんな噂が流れていた。</h1>
                 <h3>　</h3>
-                <ul>
-                    <li>ある者は「飲んでも尽きない酒」が有ると言い、またある者は「異変を起こす秘宝」があると噂する。</li>
-                    <li>そんな噂と同時に各地に現れた謎の地下への入り口の数々。</li>
-                    <li> </li>
-                    <li>妖精達はお宝と好奇心を求めて、思うがままに冒険を始めていた。</li>
-                    <li> </li>
-                    <li>噂を聞きつけ、サニー・ルナ・スターの三人も冒険に出ようとしたその矢先。</li>
-                    <li>落ちていたのは幻想郷ではまだ見慣れない、黒い板のような端末。</li>
-                    <li>三妖精が興味本位で拾い上げたその時、端末は起動する。</li>
-                    <li><h3>　</h3></li>
-                    <li> <h1>時を同じくして、あなたは目覚める。</h1></li>
-                    <li> <h1>――妖精が拾った端末の中で、【異変のナビゲーター】として…</h1></li>
-                </ul>
+                <p>ある者は「飲んでも尽きない酒」が有ると言い、またある者は「異変を起こす秘宝」があると噂する。</p>
+                <p>そんな噂と同時に各地に現れた謎の地下への入り口の数々。</p>
+                <h3>　</h3>
+                <p>妖精達はお宝と好奇心を求めて、思うがままに冒険を始めていた。</p>
+                <h3>　</h3>
+                <p>噂を聞きつけ、サニー・ルナ・スターの三人も冒険に出ようとしたその矢先。</p>
+                <p>落ちていたのは幻想郷ではまだ見慣れない、黒い板のような端末。</p>
+                <p>三妖精が興味本位で拾い上げたその時、端末は起動する。</p>
+                <h3>　</h3>
+                <h1>時を同じくして、あなたは目覚める。</h1>
+                <h1>――妖精が拾った端末の中で、【異変のナビゲーター】として…</h1>
                 <h3>　</h3>
                 <h3>　</h3>
             </div>
@@ -249,7 +239,7 @@
 
     <!--slider pan -->
 
-    <section class="section-three">
+    <section class="section-three" id="section-three">
         <section class="text-center">
             <header role="title-page" class="text-center">
                 <h1 class="line">Character</h1>
@@ -283,7 +273,7 @@
 
     <!-- section-three -->
 
-    <section class="section-three" id="section-three">
+    <section class="section-four" id="section-four">
         <div class="container">
             <section class="section-three">
                 <section class="text-center">
@@ -318,47 +308,13 @@
     </section>
 
     <!-- section-three -->
-    
+
     <!-- footer -->
 
     <footer role="footer" class="footer text-center">
 
         <div class="container">
-
-            <!-- socil-icons -->
-
-            <section role="socil-icons" class="socil-icons">
-
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-
-                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-
-                <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-
-                <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-
-            </section>
-
-            <!-- socil-icons -->
-
-            <!-- nav -->
-
-            <nav role="footer-nav">
-
-                <a href="#">Terms of Use </a>
-
-                <a href="#">Privacy Policy</a>
-
-            </nav>
-
-            <!-- nav -->
-
-            <p class="copy">&copy; 2016 Sartr. All rights reserved. Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
-
+            <p class="copy">&copy; 2018-2024 SpriteArt</p>
         </div>
 
     </footer>
